<resources>
    <string name="app_name">CST Academy 2025 UnitBV</string>
    <string name="hello_world">Hello World!</string>
    <string name="click_me">Click Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="go_to_register">Go To Register</string>
    <string name="hint_email">Write your email here…</string>
    <string name="hint_password">Write your password here…</string>

    <string name="title_podcast">Podcast</string>
    <string name="title_image">Image</string>
    <string name="title_video">Video</string>
    <string name="title_text">Text</string>
    <string name="log_out">Log Out</string>
    <string name="go_to_users">Go to users</string>
    <string name="go_to_media">Go to media</string>

<!--    Errors-->
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_invalid_password">Invalid password.</string>
    <string name="get_id_cards">Get ID Cards</string>
    <string name="get_random_address_with_users">Get random address with users</string>

</resources>