<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.8">

        <Button
            android:id="@+id/btn_go_to_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_media" />

        <Button
            android:id="@+id/btn_go_to_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_users"
            android:layout_marginTop="@dimen/default_space"/>

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_marginTop="@dimen/default_space"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>